# etl

./: .gitignore  README.md  pyproject.toml  schema_df.py
app/: main.py
app/pipeline/: extract.py  extract_load.py  load.py  schema.py
